// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle all defined error types: rejected types GET_API_VERSION 1`] = `
Object {
  "result": Object {
    "session": Object {
      "apiAccess": false,
      "authorized": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
    },
  },
  "type": "GET_API_VERSION_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "apiAccess": true,
      "authorized": false,
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "locale": null,
      "pending": false,
    },
  },
  "type": "USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "apiAccess": true,
      "authorized": true,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "locale": null,
      "pending": false,
      "username": undefined,
    },
  },
  "type": "USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "session": Object {
      "apiAccess": true,
      "authorized": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": Object {
        "test": "success",
      },
      "pending": false,
    },
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_AUTH 1`] = `
Object {
  "result": Object {
    "session": Object {
      "apiAccess": true,
      "authorized": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": true,
    },
  },
  "type": "USER_AUTH_PENDING",
}
`;
